--- a/CcsSportScheduler/CcsSportScheduler_API/Properties/launchSettings.json
+++ b/CcsSportScheduler/CcsSportScheduler_API/Properties/launchSettings.json
@@ -16,14 +16,15 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
       },
-      "windowsAuthentication": true,
+      "windowsAuthentication": false,
       "anonymousAuthentication": true,
       "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7173",
+      "applicationUrl": "http://localhost:54172", // Promenjeno na HTTP
+      "sslPort": 44328,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
