--- a/CcsSportScheduler/CcsSportScheduler_API/appsettings.json
+++ b/CcsSportScheduler/CcsSportScheduler_API/appsettings.json
@@ -9,7 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "BaseAddress": "https://localhost:44465",
+  //"BaseAddress": "https://localhost:44465",
+  "BaseAddress": "https://tksirmium.com",
   "AllowedHosts": "*",
   "AWS": {
     "AccessKey": "DO00GNZ7YUCAX3LW3UAD",
