--- a/CcsSportScheduler/CcsSportScheduler_API/CcsSportScheduler_API.csproj
+++ b/CcsSportScheduler/CcsSportScheduler_API/CcsSportScheduler_API.csproj
@@ -27,6 +27,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
+    <PackageReference Include="PdfSharpCore" Version="1.3.65" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0" />
   </ItemGroup>
