--- a/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/manifest.json
+++ b/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/manifest.json
@@ -5,7 +5,7 @@
   "icons": [
     {
       "src": "src/assets/logo.png",
-      "sizes": "512x512 192x192 64x64 32x32 24x24 16x16",
+      "sizes": "644x646",
       "type": "image/png"
     }
   ],
