--- a/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/manifest.json
+++ b/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "src/assets/logo.png",
+      "src": "/assets/logo.png",
       "sizes": "644x646",
       "type": "image/png"
     }
