--- a/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/manifest.json
+++ b/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/manifest.json
@@ -4,8 +4,18 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/assets/logo.png",
+      "src": "/assets/logo.png",
       "sizes": "644x646",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/logo_512x512.png",
+      "sizes": "510x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/logo_192x192.png",
+      "sizes": "191x192",
       "type": "image/png"
     }
   ],
