--- a/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/manifest.json
+++ b/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "TK Sirmium",
   "name": "TK Sirmium",
-  "start_url": "/index.html",
+  "start_url": ".",
   "icons": [
     {
       "src": "/assets/logo.png",
